fix on ie9

--- a/css/base.css
+++ b/css/base.css
@@ -20,3 +20,7 @@ h2 {
 }
 
 
+img {
+    border: none;
+}
+
